@@ -1,23 +1,5 @@
 # Makefile.am - process with automake and configure script..
-# stuff we need
-if HAVE_LIBMEMORY
-DIST_SUBDIRS=libreplace glib tests libmemory
-else
-DIST_SUBDIRS=libreplace glib tests
-endif
-if GLIB
-if HAVE_LIBMEMORY
-SUBDIRS=libreplace glib libmemory . tests 
-else
-SUBDIRS=libreplace glib . tests
-endif
-else
-if HAVE_LIBMEMORY
-SUBDIRS=libreplace libmemory . tests 
-else
-SUBDIRS=libreplace . tests
-endif
-endif
+SUBDIRS=glib tests 
 EXTRA_DIST=Hash.7 README.in Hash.7.pod arch hash_config.h.in
 
 # the library
@@ -33,16 +15,13 @@ libcontain_la_CXXHEADERS= Hash.h \
                           StringHash.h \
 			  IntHash.h \
 			  IniHash.h \
-			  NocaseStringHash.h
+			  NocaseStringHash.h \
+			  singleton.h
 else
 libcontain_la_CXXSOURCES=
 libcontain_la_CXXHEADERS=
 endif
-libcontain_la_SOURCES = arch/@ARCH@/compare_and_exchange.c \
-			arch/@ARCH@/decrement.c \
-			arch/@ARCH@/increment.c \
-			arch/@ARCH@/set.c \
-			stack.c \
+libcontain_la_SOURCES=	stack.c \
 			queue.c \
 			hash.c \
 			array.c \
@@ -62,11 +41,6 @@ pkginclude_HEADERS =	hash_config.h \
 			heap.h \
 			list.h $(libcontain_la_CXXHEADERS)
 noinst_HEADERS = c_interface.h binary.h prime.h
-if HAVE_LIBMEMORY
-libcontain_la_LIBADD=libreplace/libreplace.la glib/libglib.la libmemory/libmemory.la
-else
-libcontain_la_LIBADD=libreplace/libreplace.la glib/libglib.la ../libmemory/libmemory.la
-endif
 libcontain_la_LDFLAGS=-version-info 2:0:1
 AM_CFLAGS = -g -Wall -Werror -I$(top_srcdir)
 AM_CXXFLAGS = -g -Wall -Werror -I$(top_srcdir)
